Task: Dropdown to show active and archive projects Task: By default show only active project Task: One search box to find from "Project Name" & "Project Comment" Task: Update Deleting issues Task: Update Archive projects issues Task: Update Duplicate issues all are now realtime load Task: Status with colorable Task: Priotiry with colorable Task: Comment readable
Changes to be committed:
	modified:   .timetracker
	modified:   Modules/Project/DataTables/ProjectsTable.php
	modified:   Modules/Project/Resources/assets/js/project.index.js
	modified:   public/assets/css/project.index.css
	modified:   public/assets/js/project.index.js
	modified:   public/css/common.css

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -8083,31 +8083,38 @@ body.project .row {
 }
 
 .projectsTableContainter table#projectsTable .project-comments {
-    background-color: #f1f1f1;
-    max-width: 250px;
+    background-color: #fbfbfb;
+    width: 350px;
     margin: 0;
     list-style: none;
     text-align: left;
-    padding: 5px 10px;
+    padding: 15px;
     border-radius: 4px;
     border: 0;
-    font-size: 15px;
+    font-size: 16px;
+    line-height: 1.8;
     max-height: 150px;
     overflow: hidden;
-    padding-left: 25px;
+    padding-left: 35px;
     transition: 0.4s;
 }
 
 .projectsTableContainter table#projectsTable .project-comments:hover {
-    transition: 0.6s;
+    transition: 0.9s;
+    transition-delay: 1s;
     overflow-y: auto;
-    max-height: 450px;
-    max-width: 550px;
+    height: auto;
+    max-height: 500px;
+    background-color: #f8f5f5;
 }
 
 .projectsTableContainter table#projectsTable .project-comments li {
     list-style: disc;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.projectsTableContainter table#projectsTable .project-comments li::marker {
+    color: #9a9a9a;
 }
 
 .range-input {
